crates/scruff/tests/cli/snapshots/cli__lint__output_format_preview_junit.snap
---
source: crates/scruff/tests/cli/lint.rs
info:
  program: scruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - junit
    - "--select"
    - "F401,F821"
    - "--target-version"
    - py39
    - "--preview"
    - input.py
---
success: false
exit_code: 1
----- stdout -----
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="scruff" tests="3" failures="3" errors="0">
    <testsuite name="[TMP]/input.py" tests="3" disabled="0" errors="0" failures="3" package="org.scruff">
        <testcase name="org.scruff.unused-import" classname="[TMP]/input" line="1" column="8">
            <properties>
                <property name="severity" value="error"/>
            </properties>
            <failure message="`os` imported but unused">line 1, col 8, `os` imported but unused</failure>
        </testcase>
        <testcase name="org.scruff.undefined-name" classname="[TMP]/input" line="2" column="5">
            <properties>
                <property name="severity" value="error"/>
            </properties>
            <failure message="Undefined name `y`">line 2, col 5, Undefined name `y`</failure>
        </testcase>
        <testcase name="org.scruff.invalid-syntax" classname="[TMP]/input" line="3" column="1">
            <properties>
                <property name="severity" value="error"/>
            </properties>
            <failure message="Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)">line 3, col 1, Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)</failure>
        </testcase>
    </testsuite>
</testsuites>

----- stderr -----
